updated the functionality of the arrange function